--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -40,6 +40,10 @@
       {{title}}
     </h2>
 
+    <p class="content">
+      {{post.authors}}
+    </p>
+
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
