--- a/_includes/archive-single-projects.html
+++ b/_includes/archive-single-projects.html
@@ -26,79 +26,22 @@
       </div>
     {% endif %}
 
-    <h2 class="archive__item-title" itemprop="headline">
-      {% if post.link %}
-        <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
-      {% else %}
-        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
-      {% endif %}
+    <h2>
+      <a href=" {{ post.projecturl }} " target="_blank">{{title}}</a>
     </h2>
 
-
-    <!--
-    {% if post.read_time %}
-      <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
-    {% endif %}
-
-        {% if post.collection == 'teaching' %}
-          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
-        {% elsif post.collection == 'publications' %}
-          <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
-        {% elsif post.date %}
-         <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
-
-        {% endif %}
-
-    {% if post.excerpt and site.read_more != 'enabled' %}
-    <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>
-    {% elsif post.excerpt and site.read_more == 'enabled' %}
-    <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
-    {% endif %}
-
-    {% if post.citation and post.paperurl %}
-      <p>Recommended citation: {{ post.citation }} <a href="{{ post.paperurl }}"><u>{{ post.paperurl }}</u></a></p>
-    {% elsif post.citation %}
-      <p>Recommended citation: {{ post.citation }} </p>
-    {% elsif post.paperurl %}
-      <p><a href=" {{ post.paperurl }} ">paper</a></p>
-    {% endif %}
-
-    {% if post.demo %}
-    <a href=" {{ post.paperurl }} ">paper</a> <a href=" {{ post.demo }} ">demo</a>
-    {% else %}
-    <a href=" {{ post.paperurl }} ">paper</a>
-    {% endif %}
-
-
-    <a onclick="ReadMoreFunc()" id="myBtn">show more</a>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Phasellus imperdiet, nulla et dictum interdum, nisi lorem
-    egestas vitae scel<span id="dots">...</span>
-    <span id="more">erisque enim ligula venenatis dolor.
-    Maecenas nisl est, ultrices nec congue eget, auctor vitae massa.
-    Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi,
-    sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis
-    imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis.
-    Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span></p>
-
-    <script>
-    function ReadMoreFunc() {
-      var dots = document.getElementById("dots");
-      var moreText = document.getElementById("more");
-      var btnText = document.getElementById("myBtn");
-
-      if (dots.style.display === "none") {
-        dots.style.display = "inline";
-        btnText.innerHTML = "show more";
-        moreText.style.display = "none";
-      } else {
-        dots.style.display = "none";
-        btnText.innerHTML = "show less";
-        moreText.style.display = "inline";
-      }
-    }
-    </script>
-    -->
+    <p style="margin-left: 1em;">
+      {{post.description}}
+      {% if post.demo and post.code %}
+        <a href=" {{ post.paperurl }} " target="_blank">paper</a> <a href=" {{ post.code }} " target="_blank">code</a> <a href=" {{ post.demo }} " target="_blank">demo</a>
+      {% elsif post.demo %}
+        <a href=" {{ post.paperurl }} " target="_blank">paper</a> <a href=" {{ post.code }} " target="_blank">code</a> <a href=" {{ post.demo }} " target="_blank">demo</a>
+      {% elsif post.code %}
+        <a href=" {{ post.paperurl }} " target="_blank">paper</a> <a href=" {{ post.code }} " target="_blank">code</a>
+      {% elsif post.paperurl %}
+        <a href=" {{ post.paperurl }} " target="_blank">paper</a>
+      {% endif %}
+    </p>
 
   </article>
 </div>
