--- a/_includes/archive-single-cv.html
+++ b/_includes/archive-single-cv.html
@@ -32,6 +32,7 @@
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h3>
-    <object data="../files/yamakoshi.pdf" width="600" height="600"> </object>
+    <p>You can download a PDF copy of my CV <a href="/files/yamakoshi.pdf" target="_blank">here</a>.</p>
+    <iframe src="/files/yamakoshi.pdf" width="80%" height="500" frameborder="no" border="0" marginwidth="0" marginheight="0"></iframe>
  </article>
 </div>
